# hyprshell

./: .gitattributes  .gitignore  .qmlls.ini  Cargo.toml  settings.schema.json  shell.qml
apps/hyprshell/: Cargo.toml  rsx.toml
apps/hyprshell/src/: bar.rsx  lib.rs  main.rs
apps/hyprshell/src/core/: app.rs  bar.rs  config.rs  drawer.rs  frame.rs  icon.rs  module.rs  osd.rs  shape_path.rs  theme.rs
apps/hyprshell/src/features/battery/: battery.rsx
apps/hyprshell/src/features/brightness/: brightness.rsx
apps/hyprshell/src/features/clock/: clock.rsx
apps/hyprshell/src/features/volume/: volume.rsx
apps/hyprshell/src/features/workspaces/: workspaces.rsx
apps/hyprshell/src/modules/bar/: mod.rs
apps/hyprshell/src/modules/battery/: battery.rsx  battery_panel.rsx
apps/hyprshell/src/modules/battery/i18n/: en.toml  es.toml
apps/hyprshell/src/modules/brightness/: brightness.rsx
apps/hyprshell/src/modules/clock/: clock.rsx  clock_panel.rsx
apps/hyprshell/src/modules/drawer/: drawer_panel.rsx  mod.rs
apps/hyprshell/src/modules/float/: mod.rs
apps/hyprshell/src/modules/frame/: mod.rs
apps/hyprshell/src/modules/network/: network.rsx
apps/hyprshell/src/modules/notes/: mod.rs
apps/hyprshell/src/modules/notes/i18n/: en.toml  es.toml
apps/hyprshell/src/modules/notifications/: mod.rs
apps/hyprshell/src/modules/osd/: mod.rs  osd.rsx
apps/hyprshell/src/modules/panel/: mod.rs
apps/hyprshell/src/modules/settings/: mod.rs
apps/hyprshell/src/modules/settings/i18n/: en.toml  (+1 more)
apps/hyprshell/src/modules/volume/: volume.rsx
apps/hyprshell/src/modules/wallpaper/: mod.rs
apps/hyprshell/src/modules/workspaces/: workspaces.rsx
apps/hyprshell/src/shared/: battery.rs  brightness.rs  hyprland.rs  volume.rs
apps/hyprshell/src/shared/i18n/: en.toml  es.toml
apps/hyprshell/src/shared/icon/: freedesktop.rs  mod.rs  picker.rs
apps/hyprshell/src/shared/module/: mod.rs
apps/hyprshell/src/shared/paths/: mod.rs
apps/hyprshell/src/shared/services/: battery.rs  brightness.rs  hyprland.rs  locale.rs  network.rs  notes.rs  notifications.rs  volume.rs
apps/hyprshell/src/shared/theme/: mod.rs
apps/hyprshell/tests/: visual.rs
(+89 files in other folders)
