[package]
name = "hyprshell"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "hyprshell"
path = "src/main.rs"

[dependencies]
rsx = { workspace = true }
platform-layershell = { workspace = true }
serde = { version = "1", features = ["derive"] }
toml = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.150"
