[package]
name = "hyprshell"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "hyprshell"
path = "src/main.rs"

[dependencies]
rsx = { workspace = true, features = ["dynamic-svg", "async-assets"] }
platform-layershell = { workspace = true }
serde = { version = "1", features = ["derive"] }
toml = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.150"
zbus = "5.17.0"
ureq = "3.3.0"
fontdb = "0.23"

[dev-dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
platform-headless = { path = "../../../rsx/crates/platform/platform-headless" }
